Prevent the independent wrapping of "systems" in the intro
Fixes #7

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -63,6 +63,10 @@ img {
   }
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 %caption {
   font-weight: 500;
   font-size: 10px;
